# cycle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh
assets/config/: imgui.ini
assets/models/: monkey.gltf
assets/prefabs/: ground.json
assets/shaders/: materials.glsl  textures.glsl
res/config/: imgui.ini
res/models/: cube.gltf
res/prefabs/: helmet.json  monkey.json
res/shaders/: mesh.frag  mesh.vert  pbr.glsl  scene_info.glsl  skybox.frag  skybox.vert
resources/config/: imgui.ini
resources/models/: cube.gltf
resources/prefabs/: cube.json  example.json  light.json  sponza.json
resources/shaders/: depth.vert  light.glsl  lights.glsl  mesh.frag  mesh.vert  mesh_draw_info.glsl  pbr.glsl  scene_info.glsl  shadowmap.vert  textures.glsl  triangle.frag  triangle.vert  types.glsl
src/: main.cpp
src/core/: application.cpp  application.h  asset_manager.cpp  asset_manager.h  audio.cpp  audio.h  camera.cpp  camera.h  constants.h  filesystem.h  gltf_helpers.cpp  gltf_helpers.h  gltf_loader.cpp  gltf_loader.h  gltf_scene.h  id.h  json_file.cpp  json_file.h  level.cpp  level.h  logger.h  notifier.h  object.h  transform.h  util.h  world.cpp  world.h
src/cycle/: audio.cpp  audio.h  camera.cpp  camera.h  constants.h  containers.h  editor.cpp  editor.h  engine.cpp  engine.h  filesystem.h  game.cpp  game.h  gamepad_input.cpp  gamepad_input.h  globals.h  gltf_loader.cpp  gltf_loader.h  id_types.h  input.cpp  input.h  level.cpp  level.h  main.cpp  math.h  math_jolt.h  physics.cpp  physics.h  precompiled.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  types.h  world.cpp  world.h
src/game/: character.h  entity.h  interfaces.h  player.cpp  player.h  static_object.cpp  static_object.h  world.cpp  world.h  world_observer.h
src/graphics/: barrier_merger.cpp  barrier_merger.h  cascade.h  descriptor_set_writer.cpp  descriptor_set_writer.h  gpu_light.h  id.h  light.h  material.h  mesh.h  model.cpp  model.h  render_device.cpp  render_device.h  renderer.cpp  renderer.h  scene_info.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_types.h
src/input/: gamepad_input.cpp  gamepad_input.h  input_manager.cpp  input_manager.h  keyboard_input.cpp  keyboard_input.h  mouse_input.cpp  mouse_input.h
src/math/: bounds.h  math_helpers.h  math_jolt.h  math_types.h
src/objects/: object.cpp  object.h
src/physics/: physics.cpp  physics.h  (+4 more)
tools/: compress.py
(+116 files in other folders)
